<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/topicListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/topicNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/totalQuestionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="16dp" >

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_1" />

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_2" />

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_3" />

        <RadioButton
            android:id="@+id/choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_4" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_button"
        android:visibility="gone"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:visibility="gone" />

</LinearLayout>
